feat: fortsatt på rest-api. Ikke fått til å fungere enda. Co-authored by: Camilla Bolkan